--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
     "typescript": "~5.9.3",
+    "typescript-eslint": "^8.52.0",
     "vite": "^7.2.4"
   }
 }
