--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.52.0",
     "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "yaml": "^2.8.2"
   }
 }
