--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@types/json-logic-js": "^2.0.8",
+    "json-logic-js": "^2.0.5",
     "yaml": "^2.8.2",
     "zod": "^4.3.5"
   }
